; ModuleID = '/home/carl/AnghaBench/linux/arch/s390/kernel/extr_perf_cpum_sf.c_perf_exclude_event.c'
source_filename = "/home/carl/AnghaBench/linux/arch/s390/kernel/extr_perf_cpum_sf.c_perf_exclude_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.perf_event = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i64, i64, i64 }
%struct.pt_regs = type { i32 }
%struct.perf_sf_sde_regs = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.perf_event*, %struct.pt_regs*, %struct.perf_sf_sde_regs*)* @perf_exclude_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @perf_exclude_event(%struct.perf_event* %0, %struct.pt_regs* %1, %struct.perf_sf_sde_regs* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.perf_event*, align 8
  %6 = alloca %struct.pt_regs*, align 8
  %7 = alloca %struct.perf_sf_sde_regs*, align 8
  store %struct.perf_event* %0, %struct.perf_event** %5, align 8
  store %struct.pt_regs* %1, %struct.pt_regs** %6, align 8
  store %struct.perf_sf_sde_regs* %2, %struct.perf_sf_sde_regs** %7, align 8
  %8 = load %struct.perf_event*, %struct.perf_event** %5, align 8
  %9 = getelementptr inbounds %struct.perf_event, %struct.perf_event* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 3
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %3
  %14 = load %struct.pt_regs*, %struct.pt_regs** %6, align 8
  %15 = call i64 @user_mode(%struct.pt_regs* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %13
  store i32 1, i32* %4, align 4
  br label %54

18:                                               ; preds = %13, %3
  %19 = load %struct.perf_event*, %struct.perf_event** %5, align 8
  %20 = getelementptr inbounds %struct.perf_event, %struct.perf_event* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 2
  %22 = load i64, i64* %21, align 8
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %29

24:                                               ; preds = %18
  %25 = load %struct.pt_regs*, %struct.pt_regs** %6, align 8
  %26 = call i64 @user_mode(%struct.pt_regs* %25)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %29, label %28

28:                                               ; preds = %24
  store i32 1, i32* %4, align 4
  br label %54

29:                                               ; preds = %24, %18
  %30 = load %struct.perf_event*, %struct.perf_event** %5, align 8
  %31 = getelementptr inbounds %struct.perf_event, %struct.perf_event* %30, i32 0, i32 0
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 1
  %33 = load i64, i64* %32, align 8
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %41

35:                                               ; preds = %29
  %36 = load %struct.perf_sf_sde_regs*, %struct.perf_sf_sde_regs** %7, align 8
  %37 = getelementptr inbounds %struct.perf_sf_sde_regs, %struct.perf_sf_sde_regs* %36, i32 0, i32 0
  %38 = load i64, i64* %37, align 8
  %39 = icmp ne i64 %38, 0
  br i1 %39, label %40, label %41

40:                                               ; preds = %35
  store i32 1, i32* %4, align 4
  br label %54

41:                                               ; preds = %35, %29
  %42 = load %struct.perf_event*, %struct.perf_event** %5, align 8
  %43 = getelementptr inbounds %struct.perf_event, %struct.perf_event* %42, i32 0, i32 0
  %44 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %43, i32 0, i32 0
  %45 = load i64, i64* %44, align 8
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %47, label %53

47:                                               ; preds = %41
  %48 = load %struct.perf_sf_sde_regs*, %struct.perf_sf_sde_regs** %7, align 8
  %49 = getelementptr inbounds %struct.perf_sf_sde_regs, %struct.perf_sf_sde_regs* %48, i32 0, i32 0
  %50 = load i64, i64* %49, align 8
  %51 = icmp ne i64 %50, 0
  br i1 %51, label %53, label %52

52:                                               ; preds = %47
  store i32 1, i32* %4, align 4
  br label %54

53:                                               ; preds = %47, %41
  store i32 0, i32* %4, align 4
  br label %54

54:                                               ; preds = %53, %52, %40, %28, %17
  %55 = load i32, i32* %4, align 4
  ret i32 %55
}

declare dso_local i64 @user_mode(%struct.pt_regs*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
